--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -96,11 +96,16 @@
             <artifactId>caffeine</artifactId>
         </dependency>
 
-        <!-- Rate Limiting -->
+        <!-- Rate Limiting (Resilience4j) -->
         <dependency>
-            <groupId>com.giffing.bucket4j.spring.boot.starter</groupId>
-            <artifactId>bucket4j-spring-boot-starter</artifactId>
-            <version>0.9.0</version>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-spring-boot3</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-ratelimiter</artifactId>
+            <version>2.2.0</version>
         </dependency>
 
         <!-- Feature Flags -->
