--- a/package.json
+++ b/package.json
@@ -1,33 +1,47 @@
 {
-  "name": "react-games-portfolio",
-  "version": "0.1.0",
+  "name": "react-games-monorepo",
+  "version": "1.0.0",
   "private": true,
+  "packageManager": "bun@1.1.20",
+  "workspaces": [
+    "frontend",
+    "games/*",
+    "libs/*",
+    "libs/shared"
+  ],
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@radix-ui/react-slot": "^1.2.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.542.0",
-    "next": "15.2.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.1"
+    "dev": "bun run dev:services",
+    "dev:services": "run-p dev:backend dev:frontend",
+    "dev:backend": "bun --cwd backend run dev || (cd backend && mvn spring-boot:run)",
+    "dev:frontend": "bun --cwd frontend run dev",
+    "build": "run-s build:backend build:frontend",
+    "build:frontend": "bun --cwd frontend run build",
+    "build:backend": "cd backend && mvn -q -DskipTests package",
+    "lint": "run-p lint:*",
+    "lint:root": "eslint .",
+    "format": "prettier --write .",
+    "test": "run-p test:* || true",
+    "test:frontend": "bun --cwd frontend run test || echo 'frontend tests pending'",
+    "test:backend": "cd backend && mvn -q -DskipTests=false test",
+    "prepare": "husky install"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.4",
-    "tailwindcss": "^4.1.12",
-    "tw-animate-css": "^1.3.8",
-    "typescript": "^5"
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.39.1",
+    "concurrently": "^8.2.0",
+    "eslint": "^9.14.0",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.3.3"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "**/*.{json,md,css}": [
+      "prettier --write"
+    ]
   }
 }
