--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.10.2
     container_name: elasticsearch
+    profiles: [observability]
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
@@ -59,6 +60,7 @@ services:
   logstash:
     image: docker.elastic.co/logstash/logstash:8.10.2
     container_name: logstash
+    profiles: [observability]
     volumes:
       - ./logstash/pipeline:/usr/share/logstash/pipeline
       - ./logstash/config:/usr/share/logstash/config
@@ -79,6 +81,7 @@ services:
   kibana:
     image: docker.elastic.co/kibana/kibana:8.10.2
     container_name: kibana
+    profiles: [observability]
     ports:
       - "5601:5601"
     depends_on:
@@ -94,6 +97,7 @@ services:
   filebeat:
     image: docker.elastic.co/beats/filebeat:8.10.2
     container_name: filebeat
+    profiles: [observability]
     user: root
     volumes:
       - ./filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
@@ -107,6 +111,7 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
+    profiles: [observability]
     ports:
       - "9090:9090"
     volumes:
@@ -124,6 +129,7 @@ services:
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
+    profiles: [observability]
     ports:
       - "3001:3000"
     volumes:
