--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@eslint/js": "^9.39.1",
     "concurrently": "^8.2.0",
     "eslint": "^9.14.0",
+    "eslint-config-next": "^16.0.5",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "npm-run-all": "^4.1.5",
