--- a/infra/cloudrun/backend.yaml
+++ b/infra/cloudrun/backend.yaml
@@ -2,66 +2,86 @@ apiVersion: serving.knative.dev/v1
 kind: Service
 metadata:
   name: games-backend
+  namespace: projects/games-portal-479600/locations/northamerica-northeast1
   annotations:
     run.googleapis.com/ingress: all
+    run.googleapis.com/launch-stage: GA
 spec:
   template:
     metadata:
       annotations:
-        run.googleapis.com/client-name: "games-portfolio"
         autoscaling.knative.dev/minScale: "0"
         autoscaling.knative.dev/maxScale: "5"
+        run.googleapis.com/execution-environment: gen2
+        run.googleapis.com/vpc-access-egress: private-ranges-only
+        # Replace with your connector name
+        run.googleapis.com/vpc-access-connector: projects/games-portal-479600/locations/northamerica-northeast1/connectors/serverless-vpc
     spec:
+      serviceAccountName: games-backend-sa@games-portal-479600.iam.gserviceaccount.com
       containers:
-        - image: gcr.io/PROJECT_ID/games-backend:latest
+        - image: gcr.io/games-portal-479600/games-backend:latest
           ports:
             - name: http1
               containerPort: 8080
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: prod
-            - name: DB_HOST
-              value: 127.0.0.1
-            - name: DB_PORT
-              value: "5432"
-            - name: DB_NAME
-              value: gamesdb
-            - name: DB_USER
-              valueFrom:
-                secretKeyRef:
-                  name: games-secrets
-                  key: DB_USER
-            - name: DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: games-secrets
-                  key: DB_PASSWORD
             - name: APP_JWT_SECRET
               valueFrom:
                 secretKeyRef:
-                  name: games-secrets
-                  key: APP_JWT_SECRET
+                  name: app-jwt-secret
+                  key: latest
+            - name: APP_JWT_EXPIRATION_IN_MS
+              value: "3600000"
+            - name: REFRESH_TOKEN_EXPIRATION_MS
+              value: "2592000000"
+            - name: CORS_ALLOWED_ORIGINS
+              value: https://games-frontend-<hash>-uc.a.run.app,https://your.custom.domain
+            # Cloud SQL (private IP recommended); example properties
+            - name: SPRING_DATASOURCE_URL
+              value: jdbc:postgresql://10.0.0.3:5432/gamesdb
+            - name: SPRING_DATASOURCE_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: db-credentials
+                  key: username
+            - name: SPRING_DATASOURCE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: db-credentials
+                  key: password
+            # Memorystore Redis private IP
+            - name: SPRING_REDIS_HOST
+              value: 10.0.0.4
+            - name: SPRING_REDIS_PORT
+              value: "6379"
+            # Feature flags defaults
+            - name: FEATURES_REALTIMEENABLED
+              value: "true"
+            - name: FEATURES_ANTICHEATENABLED
+              value: "true"
+            - name: FEATURES_SNAKE3DMODE
+              value: "false"
           resources:
             limits:
-              cpu: "1"
+              cpu: 1000m
               memory: 512Mi
-          volumeMounts:
-            - name: cloudsql
-              mountPath: /cloudsql
-      volumes:
-        - name: cloudsql
-          emptyDir: {}
-      # Attach Cloud SQL Auth Proxy sidecar if using connector
-      # Uncomment and configure the sidecar if not using private IP
-      # containers:
-      #   - name: cloud-sql-proxy
-      #     image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.4
-      #     args:
-      #       - "--port=5432"
-      #       - "PROJECT:REGION:INSTANCE"
-      #     securityContext:
-      #       runAsNonRoot: true
-      #     resources:
-      #       limits:
-      #         cpu: "0.5"
-      #         memory: 256Mi
+          startupProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 8080
+            periodSeconds: 10
+            failureThreshold: 6
+          livenessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 8080
+            periodSeconds: 30
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/readiness
+              port: 8080
+            periodSeconds: 10
+  traffic:
+    - latestRevision: true
+      percent: 100
