--- a/infra/cloudrun/frontend.yaml
+++ b/infra/cloudrun/frontend.yaml
@@ -2,34 +2,55 @@ apiVersion: serving.knative.dev/v1
 kind: Service
 metadata:
   name: games-frontend
+  namespace: projects/games-portal-479600/locations/northamerica-northeast1
   annotations:
     run.googleapis.com/ingress: all
+    run.googleapis.com/launch-stage: GA
 spec:
   template:
     metadata:
       annotations:
-        run.googleapis.com/client-name: "games-portfolio"
         autoscaling.knative.dev/minScale: "0"
         autoscaling.knative.dev/maxScale: "10"
+        run.googleapis.com/execution-environment: gen2
     spec:
+      serviceAccountName: games-frontend-sa@games-portal-479600.iam.gserviceaccount.com
       containers:
-        - image: gcr.io/PROJECT_ID/games-frontend:latest
+        - image: gcr.io/games-portal-479600/games-frontend:latest
           ports:
             - name: http1
-              containerPort: 3000
+              containerPort: 8080
           env:
             - name: NODE_ENV
               value: production
-            - name: BACKEND_URL
-              value: https://games-backend-<hash>-<region>.a.run.app
             - name: NEXTAUTH_URL
-              value: https://games-frontend-<hash>-<region>.a.run.app
+              value: https://games-frontend-<hash>-uc.a.run.app
             - name: NEXTAUTH_SECRET
               valueFrom:
                 secretKeyRef:
-                  name: games-secrets
-                  key: NEXTAUTH_SECRET
+                  name: nextauth-secret
+                  key: latest
+            - name: NEXT_PUBLIC_API_URL
+              value: https://games-backend-<hash>-uc.a.run.app/api
+            - name: NEXT_PUBLIC_FEATURE_REALTIME
+              value: "true"
+            - name: NEXT_PUBLIC_FEATURE_SNAKE_3D
+              value: "false"
           resources:
             limits:
-              cpu: "1"
+              cpu: 1000m
               memory: 512Mi
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            periodSeconds: 10
+            failureThreshold: 6
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            periodSeconds: 30
+  traffic:
+    - latestRevision: true
+      percent: 100
