--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ dist-ssr
 !.vscode/extensions.json
 .idea
 .idea/*
+*.iml
 .DS_Store
 *.suo
 *.ntvs*
@@ -200,5 +201,4 @@ dist/**/*.js.map
 
 # TypeScript v1 declaration files
 typings/
-!/frontend/.idea/
 !/.idea/
