feat: introduce feature flags management system with runtime editing
- Add `FeaturesController` to expose current feature flag states via `/api/features`
- Create `FeatureService` to centralize feature flag evaluation and allow runtime modifications using an in-memory overlay
- Add `AdminFeaturesController` with `/api/admin/features` endpoints for listing and updating feature flags at runtime
- Extend `application.yml` with sample feature flag configurations for toggling functionality
- Implement React-based admin UI (`/admin/flags`) to manage feature flags, including runtime editing and toggling
- Secure in-memory overlay implementation with synchronized access for thread safety
- Add default fallback behavior for feature flags to prevent configuration errors

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -42,6 +42,16 @@ features:
   realtime_enabled: true
   chess_enabled: true
   checkers_enabled: true
+  payments:
+    stripe_enabled: false
+  cache:
+    redis_enabled: false
+  kv:
+    redis_enabled: false
+  db:
+    external_enabled: true
+  mail:
+    provider: smtp
 
 # CORS Configuration
 cors:
