--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -18,9 +18,11 @@ NEXT_PUBLIC_API_URL=http://localhost:8080/api
 # NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
 # NEXT_PUBLIC_FIREBASE_APP_ID=
 # Stripe (test mode)
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=REDACTED_STRIPE_PUBLISHABLE
-STRIPE_SECRET_KEY=REDACTED_STRIPE_SECRET
-STRIPE_WEBHOOK_SECRET=REDACTED_STRIPE_WEBHOOK
+# NOTE: Do not commit real-looking keys (e.g., starting with pk_test_, sk_test_, whsec_)
+# Use placeholders here and set real values in .env.local or CI secrets.
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=<your_publishable_key>
+STRIPE_SECRET_KEY=<your_secret_key>
+STRIPE_WEBHOOK_SECRET=<your_webhook_secret>
 
 # i18n
 NEXT_PUBLIC_DEFAULT_LOCALE=en
