--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,5 +1,5 @@
 # .github/workflows/ci-cd.yml
-name: CI/CD Pipeline
+name: CI/CD Pipeline (Bun + Maven)
 
 on:
   push:
@@ -30,47 +30,47 @@ jobs:
           --health-timeout 5s
           --health-retries 5
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
-          java-version: "17"
-          distribution: "temurin"
-          cache: "maven"
+          java-version: '21'
+          distribution: 'temurin'
+          cache: 'maven'
 
-      - name: Build and test with Maven
-        run: |
-          cd backend
-          ./mvnw verify -Pci
+      - name: Build & Test (Maven)
+        working-directory: backend
+        run: mvn -B -DskipTests=false verify
 
   test-frontend:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Use Node.js 18
-        uses: actions/setup-node@v3
+      - name: Setup Bun
+        uses: oven/setup-bun@v2
         with:
-          node-version: "18"
-          cache: "yarn"
+          bun-version: latest
 
-      - name: Install dependencies
-        run: |
-          cd frontend
-          yarn install --frozen-lockfile
+      - name: Install dependencies (monorepo)
+        run: bun install --frozen-lockfile
 
-      - name: Run tests
-        run: |
-          cd frontend
-          yarn test:ci
+      - name: Lint (frontend)
+        run: bun --cwd frontend run lint:ci
+
+      - name: Test (frontend)
+        run: bun --cwd frontend test
+
+      - name: Build (frontend)
+        run: bun --cwd frontend build
 
   build-and-push:
     needs: [test-backend, test-frontend]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
