--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,7 +8,7 @@ on:
     branches: [ main ]
 
 env:
-  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+  DOCKERHUB_USERNAME: ${{ vars.DOCKERHUB_USERNAME }}
   DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
   SPRING_PROFILES_ACTIVE: ci
 
@@ -68,14 +68,17 @@ jobs:
   build-and-push:
     needs: [test-backend, test-frontend]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    # Only run on main when Docker Hub secrets are present; otherwise skip gracefully
+    if: |
+      github.ref == 'refs/heads/main' &&
+      (vars.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '')
     steps:
       - uses: actions/checkout@v4
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set up Docker Buildx
@@ -87,7 +90,7 @@ jobs:
           context: .
           file: ./backend/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/games-backend:latest
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/games-backend:latest
 
       - name: Build and push frontend
         uses: docker/build-push-action@v4
@@ -95,7 +98,7 @@ jobs:
           context: .
           file: ./frontend/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/games-frontend:latest
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/games-frontend:latest
 
   deploy:
     needs: build-and-push
