feat: integrate GCP Cloud Run, Cloud SQL, and feature enhancements
- **Backend Enhancements:**
  - Removed `FeaturesController` and integrated its functionality into the improved `FeatureController` to consolidate feature flag management.
  - Extended `FeatureController` to support environment-driven feature flags alongside service-backed flags for enhanced flexibility in toggling.
  - Introduced `getBool` and `putIfAbsent` utility methods to ensure clean merging of configuration sources.
  - Added `application-cloud.yml` for Cloud SQL configuration and production-oriented settings.

- **CI/CD Updates:**
  - Extended GitHub Actions workflow to support GCP Artifact Registry and Cloud Run deployments.
  - Introduced conditional `deploy-cloudrun` job for deploying backend and frontend services to Cloud Run on `main` branch pushes.
  - Added Docker configuration changes to enable Image Push to Artifact Registry.
  - Configured deployment with Cloud SQL connectivity and secrets managed via GCP Secret Manager.

- **Docker Enhancements:**
  - Refactored `backend/Dockerfile` to enable multi-stage builds and reduce image size.
  - Added Cloud SQL Proxy installation and setup steps to support private database connections.
  - Leveraged a `startup.sh` script to dynamically configure application environment variables and manage Cloud SQL Proxy lifecycle.

- **Configuration Additions:**
  - Updated `.github/workflows/ci-cd.yml` to include GCP-specific variables such as `GCP_PROJECT_ID`, `GCP_REGION`, and `GCP_INSTANCE_CONNECTION_NAME`.
  - Added comprehensive `.dockerignore` for backend and frontend to optimize Docker build contexts and prevent unnecessary file inclusion.
  - Enhanced logback configuration with conditional Logstash appender enabling for better debugging in production.

- **Documentation Updates:**
  - Expanded README with detailed instructions for setting up Cloud SQL, Secret Manager, and Artifact Registry.
  - Documented deployment processes (manual and CI-driv

--- a/.gitignore
+++ b/.gitignore
@@ -94,7 +94,6 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
 .env.development.local
 .env.test.local
 .env.production.local
@@ -110,7 +109,6 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
@@ -177,11 +175,9 @@ yarn-error.log
 *.sublime-workspace
 
 # Visual Studio Code
-.vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
-!.vscode/extensions.json
 .history/*
 
 
@@ -189,7 +185,6 @@ yarn-error.log
 /build
 
 # System files
-.DS_Store
 Thumbs.db
 
 
@@ -210,3 +205,7 @@ target/
 !**/src/test/**/target/
 
 replacements.txt
+/cert.pem
+/games-portal-479600-b7896ad157fb.json
+/gha-key.json
+/server-ca.pem
