--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,6 +11,12 @@ env:
   DOCKERHUB_USERNAME: ${{ vars.DOCKERHUB_USERNAME }}
   DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
   SPRING_PROFILES_ACTIVE: ci
+  GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  GCP_REGION: ${{ secrets.GCP_REGION }}
+  # Artifact Registry repository name (create it once in your project)
+  AR_REPO: ${{ vars.AR_REPO || 'games' }}
+  BACKEND_SERVICE: ${{ vars.BACKEND_SERVICE || 'games-backend' }}
+  FRONTEND_SERVICE: ${{ vars.FRONTEND_SERVICE || 'games-frontend' }}
 
 jobs:
   test-backend:
@@ -68,10 +74,8 @@ jobs:
   build-and-push:
     needs: [test-backend, test-frontend]
     runs-on: ubuntu-latest
-    # Only run on main when Docker Hub secrets are present; otherwise skip gracefully
-    if: |
-      github.ref == 'refs/heads/main' &&
-      (vars.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '')
+    # Only run on main when Docker Hub credentials are present; otherwise skip gracefully
+    if: ${{ github.ref == 'refs/heads/main' && vars.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '' }}
     steps:
       - uses: actions/checkout@v4
 
@@ -100,10 +104,67 @@ jobs:
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/games-frontend:latest
 
+  deploy-cloudrun:
+    needs: [ test-backend, test-frontend ]
+    runs-on: ubuntu-latest
+    # Deploy to Cloud Run only on main when GCP secrets are configured
+    if: ${{ github.ref == 'refs/heads/main' && secrets.GCP_PROJECT_ID != '' && secrets.GCP_REGION != '' && secrets.GCP_SA_KEY != '' }}
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up gcloud
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+
+      - name: Configure Docker to use gcloud as a credential helper
+        run: |
+          gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev --quiet
+
+      - name: Compute image tags
+        id: tags
+        run: |
+          SHA=${GITHUB_SHA::12}
+          echo "backend=${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ env.AR_REPO }}/${{ env.BACKEND_SERVICE }}:${SHA}" >> $GITHUB_OUTPUT
+          echo "frontend=${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ env.AR_REPO }}/${{ env.FRONTEND_SERVICE }}:${SHA}" >> $GITHUB_OUTPUT
+
+      - name: Build & push backend image to Artifact Registry
+        run: |
+          docker build -t ${{ steps.tags.outputs.backend }} -f backend/Dockerfile .
+          docker push ${{ steps.tags.outputs.backend }}
+
+      - name: Build & push frontend image to Artifact Registry
+        run: |
+          docker build -t ${{ steps.tags.outputs.frontend }} -f frontend/Dockerfile .
+          docker push ${{ steps.tags.outputs.frontend }}
+
+      - name: Deploy backend to Cloud Run (image)
+        run: |
+          gcloud run deploy ${{ env.BACKEND_SERVICE }} \
+            --region="${{ secrets.GCP_REGION }}" \
+            --image=${{ steps.tags.outputs.backend }} \
+            --allow-unauthenticated \
+            --set-env-vars SPRING_PROFILES_ACTIVE=prod \
+            --add-cloudsql-instances "${{ vars.GCP_INSTANCE_CONNECTION_NAME || secrets.GCP_INSTANCE_CONNECTION_NAME }}" \
+            --set-secrets "SPRING_DATASOURCE_URL=SPRING_DATASOURCE_URL:latest,SPRING_DATASOURCE_USERNAME=SPRING_DATASOURCE_USERNAME:latest,SPRING_DATASOURCE_PASSWORD=SPRING_DATASOURCE_PASSWORD:latest"
+
+      - name: Deploy frontend to Cloud Run (image)
+        run: |
+          gcloud run deploy ${{ env.FRONTEND_SERVICE }} \
+            --region="${{ secrets.GCP_REGION }}" \
+            --image=${{ steps.tags.outputs.frontend }} \
+            --allow-unauthenticated \
+            --set-env-vars NEXT_PUBLIC_API_URL=${{ vars.NEXT_PUBLIC_API_URL || 'https://example-api' }}
+
   deploy:
     needs: build-and-push
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: ${{ github.ref == 'refs/heads/main' && secrets.PRODUCTION_HOST != '' && secrets.PRODUCTION_USER != '' && secrets.SSH_PRIVATE_KEY != '' }}
     environment: production
     steps:
       - name: Deploy to production
