### chore: simplify setup, enhance runtime resilience, improve docs
- **Dependency & Lockfile Updates:**
  - Removed `bun.lockb` from `.dockerignore` for deterministic builds.
  - Retained lockfiles (`bun.lockb`, `package-lock.json`, etc.) to improve caching and ensure reproducibility.

- **Frontend Enhancements:**
  - Updated `package.json` scripts:
    - `dev` and `start` commands now respect dynamic ports via `${PORT:-8080}`; binds to `0.0.0.0` in `start` for Cloud Run compatibility.
  - Enhanced `next.config.*`:
    - Introduced standalone output mode based on `NEXT_STANDALONE` for optimized Docker builds.
    - Added `assetPrefix: '/'` to fix asset loading issues on nested routes.
    - Extended `transpilePackages` to ensure smooth monorepo builds with workspace dependencies.
    - Improved proxy rewrite handling via `NEXT_PUBLIC_API_URL`.
  - Added a robust launcher (`frontend/docker/run.sh`):
    - Prioritizes standalone server entry.
    - Falls back to `next start` if no standalone entry found.

- **Backend Adjustments:**
  - Changed Dockerfile `EXPOSE` port to `3000` for consistency with Spring Boot defaults and Cloud Run health checks.

- **Docs Overhaul:**
  - Simplified README:
    - Replaced legacy instructions with streamlined monorepo setup and Cloud Run deployment steps.
    - Documented monorepo-aware Docker builds and runtime fallback strategy for frontend.
    - Added multi-stage game publishing strategies, from static bundling to runtime plugin systems.
    - Clearly explained recent production resilience changes, including health-check-friendly configs.

These adjustments reduce developer friction, ensure builds are reproducible, and improve deployment stability, particularly in Cloud Run environments.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -100,7 +100,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./frontend/Dockerfile
+          file: ./frontend/Dockerfile.monorepo
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/games-frontend:latest
 
@@ -140,7 +140,7 @@ jobs:
 
       - name: Build & push frontend image to Artifact Registry
         run: |
-          docker build -t ${{ steps.tags.outputs.frontend }} -f frontend/Dockerfile .
+          docker build -t ${{ steps.tags.outputs.frontend }} -f frontend/Dockerfile.monorepo .
           docker push ${{ steps.tags.outputs.frontend }}
 
       - name: Deploy backend to Cloud Run (image)
@@ -149,6 +149,7 @@ jobs:
             --region="${{ secrets.GCP_REGION }}" \
             --image=${{ steps.tags.outputs.backend }} \
             --allow-unauthenticated \
+            --port=3000 \
             --set-env-vars SPRING_PROFILES_ACTIVE=prod \
             --add-cloudsql-instances "${{ vars.GCP_INSTANCE_CONNECTION_NAME || secrets.GCP_INSTANCE_CONNECTION_NAME }}" \
             --set-secrets "SPRING_DATASOURCE_URL=SPRING_DATASOURCE_URL:latest,SPRING_DATASOURCE_USERNAME=SPRING_DATASOURCE_USERNAME:latest,SPRING_DATASOURCE_PASSWORD=SPRING_DATASOURCE_PASSWORD:latest"
@@ -159,7 +160,8 @@ jobs:
             --region="${{ secrets.GCP_REGION }}" \
             --image=${{ steps.tags.outputs.frontend }} \
             --allow-unauthenticated \
-            --set-env-vars NEXT_PUBLIC_API_URL=${{ vars.NEXT_PUBLIC_API_URL || 'https://example-api' }}
+            --port=8080 \
+            --set-env-vars NEXT_PUBLIC_API_URL=${{ vars.NEXT_PUBLIC_API_URL || 'https://games-backend-245231653364.northamerica-northeast1.run.app/api' }}
 
   deploy:
     needs: build-and-push
