**chore: update Docker compose ports and archive workflows**
- **Docker Compose Adjustments:**
  - Updated backend ports from `8080:8080` to `3000:3000` and frontend ports from `3000:3000` to `8080:8080` for consistent alignment with runtime expectations and local development flow.
  - Adjusted `NEXT_PUBLIC_API_URL` environment variable to match port changes (`http://localhost:3000/api` in frontend).

- **CI/CD Workflow Simplification:**
  - **Archival:**
    - Archived several outdated workflows (`frontend-deploy.yml`, `ci.yml`, `backend-deploy.yml`, `game-deploy.yml`).
    - Replaced triggered actions with `workflow_dispatch` to allow manual runs if necessary.
    - Clarified archival status with inline documentation and renamed workflows (e.g., `(Archived) Deploy Frontend to Firebase Hosting`).
    - Disabled archived jobs explicitly using `if: ${{ false }}` to prevent accidental execution.
  - **Enhancements:**
    - Updated `.github/workflows/ci-cd.yml`:
      - Added a step to compute SSH deployment readiness (`sshflags`) to streamline conditional logic for production deploys.

These updates consolidate workflows for better maintainability and ensure clarity during CI/CD execution while aligning development and runtime configurations.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -197,9 +197,17 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
     steps:
+      - name: Compute SSH deploy flags
+        id: sshflags
+        run: |
+          if [ -n "${{ secrets.PRODUCTION_HOST }}" ] && [ -n "${{ secrets.PRODUCTION_USER }}" ] && [ -n "${{ secrets.SSH_PRIVATE_KEY }}" ]; then
+            echo "can_ssh=true" >> $GITHUB_OUTPUT
+          else
+            echo "can_ssh=false" >> $GITHUB_OUTPUT
+          fi
       - name: Deploy to production
         uses: appleboy/ssh-action@master
-        if: ${{ github.ref == 'refs/heads/main' && secrets.PRODUCTION_HOST != '' && secrets.PRODUCTION_USER != '' && secrets.SSH_PRIVATE_KEY != '' }}
+        if: ${{ github.ref == 'refs/heads/main' && steps.sshflags.outputs.can_ssh == 'true' }}
         with:
           host: ${{ secrets.PRODUCTION_HOST }}
           username: ${{ secrets.PRODUCTION_USER }}
