--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -1,42 +1,14 @@
-name: Deploy Frontend to Firebase Hosting
+name: (Archived) Deploy Frontend to Firebase Hosting
 
 on:
-  push:
-    branches: [ main ]
-    paths:
-      - "frontend/**"
-      - ".github/workflows/frontend-deploy.yml"
+  # Archived workflow: keep disabled by default. Manually run only if ever needed.
+  workflow_dispatch:
 
 jobs:
   deploy-frontend:
-    name: Deploy Frontend
+    name: Archived (not in use; frontend runs on Cloud Run)
+    if: ${{ false }}
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "18"
-          cache: "yarn"
-
-      - name: Install Dependencies
-        working-directory: ./frontend
-        run: yarn install --frozen-lockfile
-
-      - name: Build
-        working-directory: ./frontend
-        env:
-          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
-        run: |
-          yarn build
-
-      - name: Deploy to Firebase
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy --only hosting
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-          PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+      - name: Skip
+        run: echo "This workflow is archived. Frontend is deployed to Cloud Run via ci-cd.yml."
