--- a/.github/workflows/game-deploy.yml
+++ b/.github/workflows/game-deploy.yml
@@ -1,11 +1,9 @@
-name: Deploy Snake Game
+name: (Archived) Deploy Snake Game
 
 on:
-  push:
-    branches: [ main ]
-    paths:
-      - "games/snake/**"
-      - ".github/workflows/game-deploy.yml"
+  # Archived: this project deploys the SSR frontend on Cloud Run.
+  # Individual game hosting on Firebase is no longer used.
+  workflow_dispatch:
 
 env:
   FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
@@ -14,40 +12,9 @@ env:
 
 jobs:
   deploy-snake:
-    name: Deploy Snake Game
+    name: Archived (not in use)
+    if: ${{ false }}
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "18"
-          cache: "yarn"
-
-      - name: Install Dependencies
-        working-directory: ./games/snake
-        run: |
-          yarn install --frozen-lockfile
-
-      - name: Build
-        working-directory: ./games/snake
-        env:
-          NEXT_PUBLIC_API_URL: ${{ env.NEXT_PUBLIC_API_URL }}
-        run: |
-          yarn build
-          yarn export -o out
-
-      - name: Deploy to Firebase Hosting
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy --only hosting:snake-game
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-          PROJECT_ID: ${{ env.FIREBASE_PROJECT_ID }}
-
-      - name: Update Game Metadata
-        run: |
-          echo "Snake game deployed successfully"
+      - name: Skip
+        run: echo "This workflow is archived. Games are served via the unified Next.js frontend on Cloud Run."
